# test_requests

./: .coverage  README.md  pyproject.toml  pytest.ini
project/: main.py
tests/: test_requests.py
